<resources>
    <string name="app_name">SShare</string>
    <string name="start_screen_header_text">SShare - Secret-Sharing Demonstrator</string>
    <string name="start_screen_split_data_button_text">Split Data</string>
    <string name="start_screen_join_data_button_text">Join Data</string>
    <string name="split_data_header_text">SShare - Split Data</string>
    <string name="split_data_string_subheader_text">Split String</string>
    <string name="split_data_file_subheader_text">Split File</string>
    <string name="split_data_open_file_button_text">Open File Dialog</string>
    <string name="split_data_split_button_text">Continue</string>
    <string name="sshare_settings_header_text">SShare - Configure Secret-Sharing</string>
    <string name="sshare_settings_threshold_subheader_text">Threshold</string>
    <string name="sshare_settings_sharecount_subheader_text">Share Count</string>
    <string name="sshare_settings_estimated_filesize_subheader_text">Estimated Share Size</string>
    <string name="sshare_settings_output_folder_subheader_text">Output to Folder</string>
    <string name="sshare_settings_open_folder_button_text">Open Folder Dialog</string>
    <string name="sshare_settings_split_button_text">Split Data</string>
    <string name="join_data_header_text">SShare - Join Data</string>
    <string name="join_data_from_clipboard_subheader_text">From Clipboard</string>
    <string name="join_data_from_clipboard_button_text">Add from Clipboard</string>
    <string name="join_data_select_files_subheader_text">From File</string>
    <string name="join_data_open_files_button_text">Open File Dialog</string>
    <string name="join_data_output_folder_subheader_text">Output Folder</string>
    <string name="join_data_join_button_text">Join Data</string>
    <string name="split_data_default_string">SECRET</string>
    <string name="sshare_setting_default_threshold">2</string>
    <string name="sshare_settings_button_up_text">+</string>
    <string name="sshare_settings_button_down_text">-</string>
    <string name="sshare_settings_default_sharecount">2</string>
    <string name="sshare_settings_password_subheader_text">Passphrase</string>
    <string name="folder_chooser_button_text">Select Folder</string>
    <string name="join_data_share_list_subheader_text">Shares</string>
    <string name="show_secret_subheader_text">Secret Bytes (Base64)</string>
    <string name="show_secret_string_subheader_text">Secret String</string>
    <string name="join_data_output_file_name_subheader_text">Output Filename</string>
    <string name="sshare_settings_output_file_name_subheader_text">Output Filename</string>
</resources>
