<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/main_background_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/join_data_scroll_view"
        android:layout_gravity="center_horizontal"
        style="@style/screen_scroll_view_style">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/join_data_header_text"
                android:id="@+id/join_data_header_text_view"
                style="@style/header_style" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_1" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/join_data_from_clipboard_subheader_text"
                android:id="@+id/join_data_from_clipboard_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_2" />

            <Button
                android:text="@string/join_data_from_clipboard_button_text"
                android:id="@+id/join_data_from_clipboard_button"
                style="@style/small_button_style"
                android:layout_width="216dp"
                android:layout_height="38dp"
                android:layout_marginBottom="2dp" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/join_data_select_files_subheader_text"
                android:id="@+id/join_data_select_files_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/split_data_header_divider_3" />

            <Button
                android:text="@string/join_data_open_files_button_text"
                android:id="@+id/join_data_from_file_button"
                style="@style/small_button_style"
                android:layout_width="216dp"
                android:layout_height="38dp"
                android:layout_marginBottom="2dp" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/sshare_settings_password_subheader_text"
                android:id="@+id/join_data_password_subheader_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_8" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    style="@style/check_button_style"
                    android:id="@+id/join_data_password_checkbox"
                    android:checked="false" />

                <EditText
                    style="@style/text_edit_style"
                    android:id="@+id/join_data_password_text_edit"
                    android:inputType="textVisiblePassword"/>

            </LinearLayout>

            <TextView
                style="@style/subheader_style"
                android:text="@string/join_data_output_folder_subheader_text"
                android:id="@+id/join_data_output_folder_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    style="@style/check_button_style"
                    android:id="@+id/join_data_output_folder_check_box"
                    android:checked="false" />

                <EditText
                    android:id="@+id/join_data_output_folder_text_edit"
                    style="@style/text_edit_style"/>
            </LinearLayout>

            <Button
                android:text="@string/sshare_settings_open_folder_button_text"
                android:id="@+id/join_data_open_folder_button"
                style="@style/small_button_style"
                android:layout_width="216dp"
                android:layout_height="38dp" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/join_data_output_file_name_subheader_text"
                android:id="@+id/join_data_output_file_name_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_6" />

            <EditText
                android:id="@+id/join_data_output_file_name_text_edit"
                style="@style/text_edit_style"/>

            <TextView
                style="@style/subheader_style"
                android:text="@string/join_data_share_list_subheader_text"
                android:id="@+id/join_data_share_list_subheader_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View style="@style/Divider"
                android:id="@+id/join_data_header_divider_7" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/join_data_share_linear_layout"></LinearLayout>

            <Button
                android:text="@string/join_data_join_button_text"
                android:id="@+id/join_data_join_button"
                style="@style/big_button_style" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
