<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/main_background_color"
    android:nestedScrollingEnabled="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sshare_settings_scroll_view"
        style="@style/screen_scroll_view_style">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/sshare_settings_header_text"
                android:id="@+id/sshare_settings_header_text_view"
                style="@style/header_style" />

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_1" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/subheader_style"
                    android:text="@string/sshare_settings_threshold_subheader_text"
                    android:id="@+id/sshare_settings_threshold_subheader_text_view" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right" >

                    <Button
                        style="@style/number_picker_button_style"
                        android:text="@string/sshare_settings_button_up_text"
                        android:id="@+id/sshare_settings_threshold_button_up" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:text="@string/sshare_setting_default_threshold"
                        android:id="@+id/sshare_settings_threshold_textview"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/small_button_text_size"
                        android:gravity="center_vertical|center_horizontal" />

                    <Button
                        style="@style/number_picker_button_style"
                        android:text="@string/sshare_settings_button_down_text"
                        android:id="@+id/sshare_settings_threshold_button_down" />

                </LinearLayout>
            </GridLayout>

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_2" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/subheader_style"
                    android:text="@string/sshare_settings_sharecount_subheader_text"
                    android:id="@+id/sshare_settings_sharecount_subheader_text_view" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|right" >

                    <Button
                        style="@style/number_picker_button_style"
                        android:text="@string/sshare_settings_button_up_text"
                        android:id="@+id/sshare_settings_sharecount_button_up" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:text="@string/sshare_settings_default_sharecount"
                        android:id="@+id/sshare_settings_sharecount_textview"
                        android:textColor="@color/main_text_color"
                        android:textSize="@dimen/small_button_text_size"
                        android:gravity="center_vertical|center_horizontal" />

                    <Button
                        style="@style/number_picker_button_style"
                        android:text="@string/sshare_settings_button_down_text"
                        android:id="@+id/sshare_settings_sharecount_button_down" />
                </LinearLayout>

            </GridLayout>

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_3" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/sshare_settings_estimated_filesize_subheader_text"
                android:id="@+id/sshare_settings_estimated_filesize_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_4" />

            <EditText
                android:id="@+id/sshare_settings_estimated_filesize_text_edit"
                style="@style/text_edit_style"
                android:editable="false"
                android:inputType="none" />

            <TextView
                style="@style/subheader_style"
                android:text="@string/sshare_settings_password_subheader_text"
                android:id="@+id/sshare_settings_password_subheader_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    style="@style/check_button_style"
                    android:id="@+id/sshare_settings_password_checkbox"
                    android:checked="false" />

                <EditText
                    style="@style/text_edit_style"
                    android:id="@+id/sshare_settings_password_text_edit"
                    android:inputType="textVisiblePassword" />

            </LinearLayout>

            <TextView
                style="@style/subheader_style"
                android:text="@string/sshare_settings_output_folder_subheader_text"
                android:id="@+id/sshare_settings_output_folder_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_6" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    style="@style/check_button_style"
                    android:id="@+id/sshare_settings_output_folder_check_box"
                    android:checked="false" />

                <EditText
                    android:id="@+id/sshare_settings_output_folder_text_edit"
                    style="@style/text_edit_style" />
            </LinearLayout>

            <Button
                android:text="@string/sshare_settings_open_folder_button_text"
                android:id="@+id/sshare_settings_open_folder_button"
                style="@style/small_button_style"/>

            <TextView
                style="@style/subheader_style"
                android:text="@string/sshare_settings_output_file_name_subheader_text"
                android:id="@+id/sshare_settings_output_file_name_subheader_text_view" />

            <View style="@style/Divider"
                android:id="@+id/sshare_settings_header_divider_7" />

            <EditText
                android:id="@+id/sshare_settings_output_file_name_text_edit"
                style="@style/text_edit_style"/>

            <Button
                android:text="@string/sshare_settings_split_button_text"
                android:id="@+id/sshare_settings_split_button"
                style="@style/big_button_style" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
