<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/main_background_color">

    <ScrollView
        android:id="@+id/start_screen_scroll_view"
        style="@style/screen_scroll_view_style">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:text="@string/start_screen_header_text"
                android:id="@+id/start_screen_header_text_view"
                style="@style/header_style" />

            <View style="@style/Divider"
                android:id="@+id/start_screen_header_divider_1" />

            <Button
                android:text="@string/start_screen_split_data_button_text"
                android:id="@+id/start_screen_split_data_button"
                style="@style/big_button_style" />

            <Button
                style="@style/big_button_style"
                android:text="@string/start_screen_join_data_button_text"
                android:id="@+id/start_screen_join_data_button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
